force-app/main/default/objects/Check_Log__c/Check_Log__c.object-meta.xml
<CustomObject>
    <label>Check Log</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Check Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>