force-app/main/default/objects/Check_Log__c/fields/Alternate_Rep_Account__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Rep_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Rep Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check Logs (Alternate Rep Account)</relationshipLabel>
    <relationshipName>Check_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>