force-app/main/default/objects/Check_Log__c/fields/Alternate_Rep_Contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Rep_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Rep Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check Logs (Alternate Rep Contact)</relationshipLabel>
    <relationshipName>Check_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>