force-app/main/default/objects/Check_Log__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check Logs</relationshipLabel>
    <relationshipName>Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>