force-app/main/default/objects/Check_Log__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <inlineHelpText>Use to make Check Logs searchable by Beneficiary name. Populated by a flow</inlineHelpText>
    <label>Beneficiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>