force-app/main/default/objects/Check_Log__c/fields/Beneficiary_Potential_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Potential_for_Templates__c</fullName>
    <formula>IF(!ISBLANK(Beneficiary__c), Beneficiary__r.Full_Name__c,  Potential_Beneficiary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary/Potential for Templates</label>
    <type>Text</type>
</CustomField>