force-app/main/default/objects/Check_Log__c/fields/Came_with_Joinder__c.field-meta.xml
<CustomField>
    <fullName>Came_with_Joinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Came with Joinder</label>
    <type>Checkbox</type>
</CustomField>