force-app/main/default/objects/Check_Log__c/fields/Check_Notes__c.field-meta.xml
<CustomField>
    <fullName>Check_Notes__c</fullName>
    <label>Check Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>