force-app/main/default/objects/Check_Log__c/fields/Default_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_To_Email_Address__c</fullName>
    <formula>Trust__r.Primary_Representative__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary Rep&apos;s Email</inlineHelpText>
    <label>Default To Email Address</label>
    <type>Text</type>
</CustomField>