force-app/main/default/objects/Check_Log__c/fields/Deposit_Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Scan_Date__c</fullName>
    <label>Deposit / Scan Date</label>
    <type>Date</type>
</CustomField>