force-app/main/default/objects/Check_Log__c/fields/Enrollment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not check if the check is for the initial funding of the Trust</inlineHelpText>
    <label>Enrollment Fee</label>
    <type>Checkbox</type>
</CustomField>