force-app/main/default/objects/Check_Log__c/fields/Enrollment_Fee_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Fee_Paid_Date__c</fullName>
    <formula>Trust__r.Enrollment_Fee_Paid_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Fee Paid Date</label>
    <type>Date</type>
</CustomField>