force-app/main/default/objects/Check_Log__c/fields/Initial_Funding__c.field-meta.xml
<CustomField>
    <fullName>Initial_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not check if the check is for an enrollment fee</inlineHelpText>
    <label>Initial Funding</label>
    <type>Checkbox</type>
</CustomField>