force-app/main/default/objects/Check_Log__c/fields/Internal_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account_Number__c</fullName>
    <formula>Trust__r.Internal_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Account Number</label>
    <type>Text</type>
</CustomField>