force-app/main/default/objects/Check_Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Log Date</label>
    <type>Date</type>
</CustomField>