force-app/main/default/objects/Check_Log__c/fields/Other_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Return_Reason__c</fullName>
    <inlineHelpText>This field is pulled into the Returned Check template if the Reason for Return is Other.</inlineHelpText>
    <label>Other Return Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>