force-app/main/default/objects/Check_Log__c/fields/Out__c.field-meta.xml
<CustomField>
    <fullName>Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out</label>
    <type>Checkbox</type>
</CustomField>