force-app/main/default/objects/Check_Log__c/fields/Potential_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Potential_Beneficiary__c</fullName>
    <inlineHelpText>Only use if no Beneficiary exists</inlineHelpText>
    <label>Potential Beneficiary</label>
    <length>120</length>
    <type>Text</type>
</CustomField>