force-app/main/default/objects/Check_Log__c/fields/Primary_Rep_Account__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Rep Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check Logs</relationshipLabel>
    <relationshipName>Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>