force-app/main/default/objects/Check_Log__c/fields/Primary_Rep_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Rep Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Check Logs (Primary Representative Contact)</relationshipLabel>
    <relationshipName>Check_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>