force-app/main/default/objects/Check_Log__c/fields/Primary_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Email__c</fullName>
    <formula>Primary_Rep_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Email</label>
    <type>Text</type>
</CustomField>