force-app/main/default/objects/Check_Log__c/fields/Pulled_From_Safe__c.field-meta.xml
<CustomField>
    <fullName>Pulled_From_Safe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulled From Safe</label>
    <type>Checkbox</type>
</CustomField>