force-app/main/default/objects/Check_Log__c/fields/Reason_for_Return__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Return__c</fullName>
    <description>Reason for returning check</description>
    <label>Reason for Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>The Beneficiary’s Trust sub-account is closed.</fullName>
            </value>
            <value>
                <fullName>A completed Joinder Agreement – the application to enroll in the Master Pooled Trust - has not been received.</fullName>
            </value>
            <value>
                <fullName>The check is not signed or is incomplete.</fullName>
            </value>
            <value>
                <fullName>The check has passed the “void after” or &quot;void by&quot; date.</fullName>
            </value>
            <value>
                <fullName>The check was issued “payable to” incorrectly.</fullName>
            </value>
            <value>
                <fullName>Attempts to reach you have been unsuccessful.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>