force-app/main/default/objects/Check_Log__c/fields/Return_Reason_Formula_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason_Formula_for_Templates__c</fullName>
    <formula>IF(TEXT(Reason_for_Return__c) = &quot;Other&quot;,  Other_Return_Reason__c,  TEXT(Reason_for_Return__c) + br() +Other_Return_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Reason Formula for Templates</label>
    <type>Text</type>
</CustomField>