force-app/main/default/objects/Check_Log__c/fields/Return_to_City__c.field-meta.xml
<CustomField>
    <fullName>Return_to_City__c</fullName>
    <label>Return to City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>