force-app/main/default/objects/Check_Log__c/fields/Return_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Name__c</fullName>
    <label>Return To Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>