force-app/main/default/objects/Check_Log__c/fields/Return_To_State__c.field-meta.xml
<CustomField>
    <fullName>Return_To_State__c</fullName>
    <label>Return To State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States_Abreviations</valueSetName>
    </valueSet>
</CustomField>