force-app/main/default/objects/Check_Log__c/fields/Return_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Street__c</fullName>
    <label>Return To Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>