force-app/main/default/objects/Check_Log__c/fields/Return_To_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Zip_Code__c</fullName>
    <label>Return To Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>