force-app/main/default/objects/Check_Log__c/fields/Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Returned_Date__c</fullName>
    <label>Returned Date</label>
    <type>Date</type>
</CustomField>