force-app/main/default/objects/Check_Log__c/fields/TrueLink_ID__c.field-meta.xml
<CustomField>
    <fullName>TrueLink_ID__c</fullName>
    <formula>Trust__r.True_Link_ID_from_TL_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TrueLink ID</label>
    <type>Text</type>
</CustomField>