force-app/main/default/objects/Check_Log__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Check Logs</relationshipLabel>
    <relationshipName>Check_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>