force-app/main/default/objects/Check_Log__c/fields/Trust_Closing_Process_Started__c.field-meta.xml
<CustomField>
    <fullName>Trust_Closing_Process_Started__c</fullName>
    <formula>IF(!ISBLANK( Trust__r.Closing_Process_Start_Date__c), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Closing Process Started</label>
    <type>Checkbox</type>
</CustomField>