force-app/main/default/objects/Check_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
                <default>true</default>
                <label>Check</label>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>