force-app/main/default/objects/Check_Log__c/fields/X18_Digit_Check_Log_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Check_Log_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Check Log ID</label>
    <type>Text</type>
</CustomField>