force-app/main/default/objects/Check_Log__c/validationRules/Enrollment_Fee_Need_Beneficiary_Trust.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Fee_Need_Beneficiary_Trust</fullName>
    <active>true</active>
    <description>Enrollment Fee Need Beneficiary &amp; Trust before checking Out</description>
    <errorConditionFormula>AND(ISCHANGED(Out__c), Out__c = TRUE, Enrollment_Fee__c = TRUE,
OR(ISBLANK(Beneficiary__c), ISBLANK(Trust__c)))</errorConditionFormula>
    <errorMessage>Please fill in the Beneficiary and the Trust fields before checking Out</errorMessage>
</ValidationRule>