force-app/main/default/objects/Check_Log__c/listViews/Acknowledged_Not_Enrollment_Joinder.listView-meta.xml
<ListView>
    <fullName>Acknowledged_Not_Enrollment_Joinder</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Trust__c</columns>
    <columns>Amount__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Deposit_Scan_Date__c</columns>
    <columns>Primary_Rep_Email__c</columns>
    <columns>Acknowledged_Date__c</columns>
    <columns>Enrollment_Fee__c</columns>
    <columns>Initial_Funding__c</columns>
    <columns>Out__c</columns>
    <columns>Payor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Acknowledged_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Enrollment_Fee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Initial_Funding__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Beneficiary__c</field>
        <operation>notEqual</operation>
        <value>MPT Reserve</value>
    </filters>
    <filters>
        <field>Deposit_Scan_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:45</value>
    </filters>
    <label>Acknowledged-Not Enrollment/Joinder</label>
</ListView>