force-app/main/default/objects/Check_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Log_Date__c</columns>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Trust__c</columns>
    <columns>Amount__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Notes__c</columns>
    <columns>Deposit_Scan_Date__c</columns>
    <columns>Enrollment_Fee__c</columns>
    <columns>Initial_Funding__c</columns>
    <columns>Out__c</columns>
    <columns>Payor__c</columns>
    <columns>Trust_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>