force-app/main/default/objects/Check_Log__c/listViews/All_MPT_Checks_No_Trust.listView-meta.xml
<ListView>
    <fullName>All_MPT_Checks_No_Trust</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Potential_Beneficiary__c</columns>
    <columns>Payor__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Enrollment_Fee__c</columns>
    <columns>Out__c</columns>
    <columns>Pulled_From_Safe__c</columns>
    <columns>Type__c</columns>
    <columns>Trust__c</columns>
    <columns>Return_Reason_Formula_for_Templates__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trust__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Potential_Beneficiary__c</field>
        <operation>notEqual</operation>
        <value>Multiple Benes</value>
    </filters>
    <filters>
        <field>Reason_for_Return__c</field>
        <operation>equals</operation>
    </filters>
    <label>All MPT Checks - No Trust</label>
</ListView>