force-app/main/default/objects/Check_Log__c/listViews/Kyle_Pulled_From_Safe_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Kyle_Pulled_From_Safe_Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Pulled_From_Safe__c</columns>
    <columns>Enrollment_Fee_Paid_Date__c</columns>
    <columns>Payor__c</columns>
    <columns>Trust__c</columns>
    <columns>Enrollment_Fee__c</columns>
    <columns>Out__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Out__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Enrollment_Fee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Enrollment_Fee_Paid_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Pulled_From_Safe__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Kyle - Pulled From Safe - Last 30 Days</label>
</ListView>