force-app/main/default/objects/Check_Log__c/listViews/NotOut.listView-meta.xml
<ListView>
    <fullName>NotOut</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Potential_Beneficiary__c</columns>
    <columns>Payor__c</columns>
    <columns>Amount__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Log_Date__c</columns>
    <columns>Deposit_Scan_Date__c</columns>
    <columns>Out__c</columns>
    <columns>Initial_Funding__c</columns>
    <columns>Enrollment_Fee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Out__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Enrollment_Fee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Not Out - Enrollment Fee</label>
</ListView>