force-app/main/default/objects/Check_Log__c/listViews/Out.listView-meta.xml
<ListView>
    <fullName>Out</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Trust__c</columns>
    <columns>Payor__c</columns>
    <columns>Amount__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Log_Date__c</columns>
    <columns>Deposit_Scan_Date__c</columns>
    <columns>Out__c</columns>
    <columns>Acknowledged_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Out__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Out</label>
</ListView>