force-app/main/default/objects/Check_Log__c/listViews/Out_Enrollment_Fees.listView-meta.xml
<ListView>
    <fullName>Out_Enrollment_Fees</fullName>
    <columns>NAME</columns>
    <columns>Potential_Beneficiary__c</columns>
    <columns>Enrollment_Fee_Paid_Date__c</columns>
    <columns>Payor__c</columns>
    <columns>Check_Number__c</columns>
    <columns>Check_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Deposit_Scan_Date__c</columns>
    <columns>Out__c</columns>
    <columns>Enrollment_Fee__c</columns>
    <columns>Trust__c</columns>
    <columns>Trust_Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Out__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Enrollment_Fee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Out - Enrollment Fees</label>
</ListView>